@@ -52,13 +52,17 @@
         zkaizen
         ztop
         zbottom
+        zpause
+        zfail
+        zleaf
        Zey_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-08 10:29:11 L.237'48649 T1347038929.K ~131 +----+----+----+----+----+
-     TimeCnt : //z 2015-05-08 10:29:10 L.237'48650 T1347038928.K ~7   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-05-08 10:28:46 L.237'48674 T1347003096.K ~9   +----+----+----+----+----+
+     Zndex_E : //z 2015-05-08 17:53:34 L.237'21986 T1800722330.K ~154 +----+----+----+----+----+
+     TimeCnt : //z 2015-05-08 17:53:03 L.237'22017 T1800722230.K ~8   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-05-08 17:51:10 L.237'22130 T1800650386.K ~10  +----+----+----+----+----+
+     #10  R+ : //z 2015-05-08 17:51:10 L.237'22130 T1800650386.K ~10    V+.142  L+.199  
      #9   R+ : //z 2015-05-08 10:28:46 L.237'48674 T1347003096.K ~9     V+.137  L+.192  
      #8   R+ : //z 2015-05-06 17:40:53 L.239'22747 T1663825909.K ~8     V+.127  L+.183  
      #7   R+ : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~7     V+.117  L+.176  
@@ -69,7 +73,9 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-08 10:29:11 L.237'48649 T1347038929.K ~140   R+.9    L+.192  --+----+
+     Version : //z 2015-05-08 17:53:34 L.237'21986 T1800722330.K ~164   R+.10   L+.205  --+----+
+     #8   V+ : //z 2015-05-08 17:52:13 L.237'22067 T1800686326.K ~152   R+.10   L+.198  
+     #7   R+ : //z 2015-05-08 17:51:10 L.237'22130 T1800650386.K ~142   R+.10   L+.200  V+.142  
      #7   R+ : //z 2015-05-08 10:28:46 L.237'48674 T1347003096.K ~137   R+.9    L+.193  V+.137  
      #7   V+ : //z 2015-05-06 17:41:40 L.239'22700 T1663861810.K ~133   R+.8    L+.185  
      #6   R+ : //z 2015-05-06 17:40:53 L.239'22747 T1663825909.K ~127   R+.8    L+.184  V+.127  
@@ -92,7 +98,7 @@
      K Versi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K  Vers : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K   Ver : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     K    Ve : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
+     K    Ve : //z 2015-05-08 17:52:01 L.237'22079 T1800686291.K ~149   R+.10   L+.198  
      K     V : //z 2015-04-27 16:35:09 L.248'26691 T3582415387.K ~73    R+.4    L+.148  
      KaizenZ : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
 #endregion //z 2015-04-27 11:28:04 L.248'45116 BG57IV3@XCL T1418964723.K.F4146951713-+----+----+
@@ -192,3 +198,8 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 //z 2015-05-08 10:29:10 L.237'48650 T1347038928.K[T7,L192,R9,V140]
 01. 
 #endregion //z 2015-05-08 10:28:46 L.237'48674 BG57IV3@XCL T1347003096.K.F4146951713-+----+----+
+
+#region 05-08 17:51 R#.10   @zdo 使用 libcurl 写个http post[简繁转化]的例子
+//z 2015-05-08 17:53:03 L.237'22017 T1800722230.K[T8,L200,R10,V159]
+01. 算是略微了解下 curl 。
+#endregion //z 2015-05-08 17:51:10 L.237'22130 BG57IV3@XCL T1800650386.K.F4146951713-+----+----+
