@@ -608,3 +608,15 @@ Changes to be committed:
 	new file:   "Doc/vc6/vc6\346\217\222\344\273\266.txt"
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+roundf.2015/05/08.17_54_04.98.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+	new file:   ToolKit/Cpp/roundf.c
+
